<resources>
    <string name="app_name">PostRV</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="_2_hrs">2 hrs</string>
    <string name="Unblast">Unblast</string>
    <string name="bachlp_up_because_change_is_comming_to_wordpress_n_http_anony_com_color_schame">Bachlp up,because change is comming to WordPress. \n http://anony.com/color-schame</string>
    <string name="_1_share">1 Share</string>
    <string name="like">Like</string>
</resources>