<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:padding="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="315dp"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toStartOf="@id/profile_name"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="76dp"
        android:layout_height="29dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:text="@string/Unblast"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/profile_name"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/time_ic"
        android:layout_width="61dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:padding="1.5dp"
        android:text="@string/_2_hrs"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/profile_name" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="59dp"
        android:layout_height="42dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintStart_toEndOf="@+id/profile_name"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/more" />

    <TextView
        android:id="@+id/text_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autoLink="web"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@id/img_post"
        android:text="@string/bachlp_up_because_change_is_comming_to_wordpress_n_http_anony_com_color_schame"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"


        app:layout_constraintTop_toBottomOf="@id/profile_image" />

    <ImageView
        android:id="@+id/img_post"
        android:layout_width="match_parent"
        android:adjustViewBounds="true"
        android:layout_height="282dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/profile"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/text_post"
        tools:layout_editor_absoluteY="320dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like_count"
        android:layout_width="50dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:padding="2dp"
        app:layout_constraintBottom_toTopOf="@id/action_liaout"
        android:text="12"
        android:textSize="10sp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:background="@android:color/transparent"
        app:icon="@drawable/likee"
        app:iconGravity="start"
        app:iconSize="25dp"

        app:iconTint="@android:color/transparent"
        app:iconTintMode="screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_post"


        />


    <ImageView
        android:id="@+id/arroe"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/down_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_image2" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/profile"

        app:layout_constraintBottom_toBottomOf="@+id/share"
        app:layout_constraintEnd_toStartOf="@id/arroe"
        app:layout_constraintTop_toTopOf="@+id/share" />

    <TextView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/_1_share"
        app:layout_constraintEnd_toStartOf="@id/profile_image2"
        app:layout_constraintHorizontal_bias="0.967"
        app:layout_constraintBottom_toTopOf="@id/action_liaout"


        app:layout_constraintStart_toEndOf="@id/like_count"
        app:layout_constraintTop_toBottomOf="@id/img_post" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/action_liaout"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintTop_toBottomOf="@id/like_count"
        android:weightSum="3"

        android:orientation="horizontal"
        >
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:text="@string/like"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:backgroundTint="@color/white"
            app:background="@android:color/transparent"
            app:icon="@drawable/likee"
            app:iconGravity="textStart"
            app:iconSize="35dp"

            app:iconTint="@android:color/transparent"
            app:iconTintMode="screen"


            android:layout_weight="1"


            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:text="@string/comment"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:background="@android:color/transparent"
            app:icon="@drawable/comment"
            app:iconGravity="textStart"
            app:iconSize="35dp"

            app:iconTint="@android:color/transparent"
            app:iconTintMode="screen"


            android:layout_weight="1"


            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:text="@string/share"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:background="@android:color/transparent"
            app:icon="@drawable/share"
            app:iconGravity="textStart"
            app:iconSize="35dp"
            android:gravity="center"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="screen"
            android:layout_weight="1"
            />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>